Updated readme and added completed comments

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
     box-sizing: border-box;
 }
 
+/* Assignment completed by Charles Looney Fitness. 03 NOV 2024 */
+
 body {
     font-family: 'Arial', sans-serif;
     color: #333;
